add home coponent, routing, redo structure

--- a/my-recipe-app/src/app/recipes/recipes.component.html
+++ b/my-recipe-app/src/app/recipes/recipes.component.html
@@ -1,31 +1,22 @@
 <h1>recipes works!</h1>
-<div class="column-container flex justify-evenly">
+<!-- <div class="column-container flex justify-evenly">
 
-    <!-- red column (to-do) -->
     <div class="flex flex-col bg-red-300 border border-black border-opacity-30 rounded-md"
         style="height:600px;width:300px;">
         <h1 class="text-2xl my-1 mb-2 border-b-2 border-gray-500">To-Do</h1>
 recipe info goes here
         
             </div>
-    <!-- red column (to-do) -->
     <div class="flex flex-col bg-red-300 border border-black border-opacity-30 rounded-md"
         style="height:600px;width:300px;">
         <h1 class="text-2xl my-1 mb-2 border-b-2 border-gray-500">To-Do</h1>
 recipe info goes here
         
             </div>
-    <!-- red column (to-do) -->
     <div class="flex flex-col bg-red-300 border border-black border-opacity-30 rounded-md"
         style="height:600px;width:300px;">
         <h1 class="text-2xl my-1 mb-2 border-b-2 border-gray-500">To-Do</h1>
 recipe info goes here
         
             </div>
-
-
-
-
-
-        </div>
-
+        </div> -->
