--- a/my-recipe-app/src/app/footer/footer.component.html
+++ b/my-recipe-app/src/app/footer/footer.component.html
@@ -1,25 +1,31 @@
 <footer class="border-b md:flex md:items-center md:justify-center p-4 pb-0 shadow-lg md:pb-4">
-  
-    <!-- Global navigation -->
-    <nav>
-      <ul class="list-reset md:flex md:items-center">
-        <li class="md:ml-4">
-          <a class="block no-underline hover:underline py-2 text-grey-darkest hover:text-black md:border-none md:p-0" href="#">
-            Products
-          </a>
-        </li>
-        <li class="md:ml-4">
-          <a class="border-t block no-underline hover:underline py-2 text-grey-darkest hover:text-black md:border-none md:p-0" href="#">
-            About
-          </a>
-        </li>
-        <li class="md:ml-4">
-          <a class="border-t block no-underline hover:underline py-2 text-grey-darkest hover:text-black md:border-none md:p-0" href="#">
-            Contact
-          </a>
-        </li>
-      </ul>
-    </nav>
-    <!-- END Global navigation -->
-  
-  </footer>
+
+  <!-- Global navigation -->
+  <nav>
+    <ul class="list-reset md:flex md:items-center">
+      <li class="md:ml-4">
+        <a class="block no-underline hover:underline py-2 text-grey-darkest hover:text-black md:border-none md:p-0"
+          href="#">
+          Recipes
+        </a>
+      </li>
+      <li class="md:ml-4">
+        <a class="border-t block no-underline hover:underline py-2 text-grey-darkest hover:text-black md:border-none md:p-0"
+          href="#">
+          Feeling Lucky
+        </a>
+      </li>
+      <li class="md:ml-4">
+        <a class="border-t block no-underline hover:underline py-2 text-grey-darkest hover:text-black md:border-none md:p-0"
+          href="#">
+          Random Link
+        </a>
+      </li>
+    </ul>
+    <div class="footer-text-wrapper">
+      <p>&#169; Frankemon 2021</p>
+    </div>
+  </nav>
+  <!-- END Global navigation -->
+
+</footer>
