--- a/my-recipe-app/src/app/header/header.component.html
+++ b/my-recipe-app/src/app/header/header.component.html
@@ -30,19 +30,19 @@
       <li class="md:ml-4">
         <a class="block no-underline hover:underline py-2 text-grey-darkest hover:text-black md:border-none md:p-0"
           href="#">
-          Products
+          Recipes
         </a>
       </li>
       <li class="md:ml-4">
         <a class="border-t block no-underline hover:underline py-2 text-grey-darkest hover:text-black md:border-none md:p-0"
           href="#">
-          About
+          Feeling Lucky
         </a>
       </li>
       <li class="md:ml-4">
         <a class="border-t block no-underline hover:underline py-2 text-grey-darkest hover:text-black md:border-none md:p-0"
           href="#">
-          Contact
+          Random Link
         </a>
       </li>
     </ul>
