--- a/my-recipe-app/src/app/header/header.component.html
+++ b/my-recipe-app/src/app/header/header.component.html
@@ -8,9 +8,8 @@
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
   <title>My Recipe App</title>
 </head>
-<header class="border-b md:flex md:items-center md:justify-between p-4 pb-0 shadow-lg md:pb-4">
+<!-- <header class="border-b md:flex md:items-center md:justify-between p-4 pb-0 shadow-lg md:pb-4">
 
-  <!-- Logo text or image -->
   <div class="flex items-center justify-between mb-4 md:mb-0">
     <h1 class="leading-none text-2xl text-grey-darkest">
       <a class="no-underline text-grey-darkest hover:text-black" href="#">
@@ -22,9 +21,7 @@
       <i class="fa fa-2x fa-bars"></i>
     </a>
   </div>
-  <!-- END Logo text or image -->
 
-  <!-- Global navigation -->
   <nav>
     <ul class="list-reset md:flex md:items-center">
       <li class="md:ml-4">
@@ -47,19 +44,10 @@
       </li>
     </ul>
   </nav>
-  <!-- END Global navigation -->
 
-  <!-- Search field -->
-  <form class="mb-4 w-full md:mb-0 md:w-1/4">
-    <label class="hidden" for="search-form">Search</label>
-    <input class="bg-grey-lightest border-2 focus:border-orange p-2 rounded-lg shadow-inner w-full" placeholder="Search"
-      type="text">
-    <button class="hidden">Submit</button>
-  </form>
-  <!-- END Search field -->
+   -->
 
 
-</header>
 
 <body>
 
