--- a/my-recipe-app/src/app/recipe-detail/recipe-detail.component.html
+++ b/my-recipe-app/src/app/recipe-detail/recipe-detail.component.html
@@ -2,3 +2,4 @@
     <h3>{{recipe.name}} Recipe</h3>
     <div><span>id: </span>{{recipe.id}}</div>
 </div>
+<button (click)="goBack()">go back</button>
