fix fetching id problem for recipe url

--- a/my-recipe-app/src/app/recipe-detail/recipe-detail.component.html
+++ b/my-recipe-app/src/app/recipe-detail/recipe-detail.component.html
@@ -1,5 +1,10 @@
 <div *ngIf="recipe">
     <h3>{{recipe.name}} Recipe</h3>
     <div><span>id: </span>{{recipe.id}}</div>
+    <div>
+        <p>Print recipe info here</p>
+    </div>
 </div>
-<button (click)="goBack()">go back</button>
+<button
+    class="clear bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-1 px-2 border border-blue-500 hover:border-transparent rounded"
+    (click)="goBack()">Go back</button>
