--- a/my-recipe-app/src/app/recipe-detail/recipe-detail.component.html
+++ b/my-recipe-app/src/app/recipe-detail/recipe-detail.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="recipe">
-    <h3>{{recipe.name}} Recipe</h3>
+    <h3>{{recipe.title}} Recipe</h3>
     <div><span>id: </span>{{recipe.id}}</div>
     <div>
         <p>Print recipe info here</p>
