--- a/my-recipe-app/src/app/app.component.html
+++ b/my-recipe-app/src/app/app.component.html
@@ -1,42 +1,6 @@
 <app-header></app-header>
-<header class="border-b md:flex md:items-center md:justify-between p-4 pb-0 shadow-lg md:pb-4">
-
-    <!-- Logo text or image -->
-    <div class="flex items-center justify-between mb-4 md:mb-0">
-        <h1 class="leading-none text-2xl text-grey-darkest">
-            <a class="no-underline text-grey-darkest hover:text-black" href="#">
-                Angular Recipe App
-            </a>
-        </h1>
-
-        <a class="text-black hover:text-orange md:hidden" href="#">
-            <i class="fa fa-2x fa-bars"></i>
-        </a>
-    </div>
-
-    <nav>
-        <ul class="list-reset md:flex md:items-center">
-            <li class="md:ml-4">
-                <a class="block no-underline hover:underline py-2 text-grey-darkest hover:text-black md:border-none md:p-0"
-                    routerLink="/dashboard">
-                    Dashboard
-                </a>
-            </li>
-            <li class="md:ml-4">
-                <a class="block no-underline hover:underline py-2 text-grey-darkest hover:text-black md:border-none md:p-0"
-                    routerLink="/recipes">
-                    Recipes
-                </a>
-            </li>
-            <li class="md:ml-4">
-                <a class="border-t block no-underline hover:underline py-2 text-grey-darkest hover:text-black md:border-none md:p-0"
-                    href="#">
-                    Feeling Lucky
-                </a>
-            </li>
-        </ul>
-    </nav>
-</header>
-<router-outlet></router-outlet>
-<app-messages></app-messages>
-<!-- <app-footer></app-footer> -->
+<main class="mx-52 my-8">
+    <router-outlet></router-outlet>
+    <app-messages></app-messages>
+</main>
+<app-footer></app-footer>
