--- a/my-recipe-app/src/app/dashboard/dashboard.component.html
+++ b/my-recipe-app/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,33 @@
-<h2>Top Recipes</h2>
+<div class="featuredRecipeCard flex bg-green-200 my-2 p-2 border rounded-lg min-w-min">
+    <img class="rounded-lg" img src="https://via.placeholder.com/300" alt="">
+    <div class="px-2">
+        <h1 class="text-xl pb-2 font-bold">Today's Featured Recipe</h1>
+        <!-- <h2 class="text-xl pb-2">{{recipe.title}}</h2> -->
+        <!-- <img class="rounded-lg" src="{{recipe.image}}" alt=""> -->
+        <h2 class="text-xl pb-2">Dynamic Recipe Title</h2>
+        <p>Dynamic description</p>
+        <ul class="recipe-info-list">
+            <li class="recipe-servings pt-2">Servings: </li>
+            <li class="recipe-time">Cook Time: </li>
+        </ul>
+    </div>
+
+</div>
+<h1 class="text-xl pb-2">Our suggestions</h1>
+<section class="topRecipes">
+    <div class="topRecipes-wrapper grid grid-cols-4 grid-rows-2 gap-2">
+        <div class="recipe-card bg-indigo-200 my-2 p-2 border rounded-lg max-w-xs">
+            <!-- <h2 class="text-xl pb-2">{{recipe.title}}</h2> -->
+            <!-- <img class="rounded-lg" src="{{recipe.image}}" alt=""> -->
+            <h2 class="text-xl pb-2">Dynamic Recipe Title</h2>
+            <img class="rounded-lg" img src="https://via.placeholder.com/300" alt="">
+            <ul class="recipe-info-list">
+                <li class="recipe-servings pt-2">Servings: </li>
+                <li class="recipe-time">Cook Time: </li>
+            </ul>
+        </div>
+    </div>
+</section>
 <div>
     <a *ngFor="let recipe of recipes" routerLink="/detail/{{recipe.id}}">
         {{recipe.title}}
