--- a/my-recipe-app/src/app/header/header.component.html
+++ b/my-recipe-app/src/app/header/header.component.html
@@ -1,14 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
-  <title>My Recipe App</title>
-</head>
-<!-- <header class="border-b md:flex md:items-center md:justify-between p-4 pb-0 shadow-lg md:pb-4">
+<header class="border-b md:flex md:items-center md:justify-between p-4 pb-0 shadow-lg md:pb-4">
 
   <div class="flex items-center justify-between mb-4 md:mb-0">
     <h1 class="leading-none text-2xl text-grey-darkest">
@@ -26,7 +16,13 @@
     <ul class="list-reset md:flex md:items-center">
       <li class="md:ml-4">
         <a class="block no-underline hover:underline py-2 text-grey-darkest hover:text-black md:border-none md:p-0"
-          href="#">
+          routerLink="/dashboard">
+          Dashboard
+        </a>
+      </li>
+      <li class="md:ml-4">
+        <a class="block no-underline hover:underline py-2 text-grey-darkest hover:text-black md:border-none md:p-0"
+          routerLink="/recipes">
           Recipes
         </a>
       </li>
@@ -36,21 +32,6 @@
           Feeling Lucky
         </a>
       </li>
-      <li class="md:ml-4">
-        <a class="border-t block no-underline hover:underline py-2 text-grey-darkest hover:text-black md:border-none md:p-0"
-          href="#">
-          Random Link
-        </a>
-      </li>
     </ul>
   </nav>
-
-   -->
-
-
-
-<body>
-
-</body>
-
-</html>
+</header>
