add dynamic recipe cards to all recipes

--- a/my-recipe-app/src/app/dashboard/dashboard.component.html
+++ b/my-recipe-app/src/app/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
     <img class="rounded-lg" img src="https://via.placeholder.com/300" alt="">
     <div class="px-2">
         <h1 class="text-xl pb-2 font-bold">Today's Featured Recipe</h1>
-        <!-- <h2 class="text-xl pb-2">{{recipe.title}}</h2> -->
+        <!-- <h2 class="text-xl pb-2">{{recipes.title}}</h2> -->
         <!-- <img class="rounded-lg" src="{{recipe.image}}" alt=""> -->
         <h2 class="text-xl pb-2">Dynamic Recipe Title</h2>
         <p>Dynamic description</p>
