--- a/my-recipe-app/src/app/recipes/recipes.component.html
+++ b/my-recipe-app/src/app/recipes/recipes.component.html
@@ -28,23 +28,21 @@
 </div>
 <section class="allRecipes">
     <div class="allRecipes-wrapper grid grid-cols-4 grid-rows-2 gap-2">
-        <div class="recipe-card bg-blue-200 my-2 p-2 border rounded-lg max-w-xs">
-            <!-- <h2 class="text-xl pb-2">{{recipe.title}}</h2> -->
-            <!-- <img class="rounded-lg" src="{{recipe.image}}" alt=""> -->
-            <h2 class="text-xl pb-2">Dynamic Recipe Title</h2>
-            <img class="rounded-lg" img src="https://via.placeholder.com/300" alt="">
-            <ul class="recipe-info-list">
-                <li class="recipe-servings pt-2">Servings: </li>
-                <li class="recipe-time">Cook Time: </li>
-            </ul>
-        </div>
+        <ul *ngFor="let recipe of recipes">
+            <li>
+                <div class="recipe-card bg-blue-200 my-2 p-2 border rounded-lg max-w-xs">
+                    <a routerLink="/detail/{{recipe.id}}">
+                        <h2 class="text-xl pb-2">{{recipe.title}}</h2>
+                        <img class="rounded-lg" src="{{recipe.image}}" alt="">
+                    </a>
+                    <!-- <img class="rounded-lg" img src="https://via.placeholder.com/300" alt=""> -->
+                    <ul class="recipe-info-list">
+                        <li class="recipe-servings pt-2">Servings: {{recipe.servings}} </li>
+                        <li class="recipe-time">Cook Time: {{recipe.readyInMinutes}} </li>
+                    </ul>
+                </div>
+            </li>
+        </ul>
     </div>
 </section>
-<ul>
-    <li *ngFor="let recipe of recipes">
-        <a routerLink="/detail/{{recipe.id}}">
-            <span>#{{recipe.id}}</span> {{recipe.title}}
-        </a>
-    </li>
-</ul>
 <!-- <app-recipe-detail [recipe]="selectedRecipe"></app-recipe-detail> -->
