--- a/my-recipe-app/src/app/recipes/recipes.component.html
+++ b/my-recipe-app/src/app/recipes/recipes.component.html
@@ -17,13 +17,13 @@
     <div class="filter-list">
         <p>Filter options:</p>
         <label for="vegetarian"> Vegetarian </label>
-        <input type="checkbox" name="vegetarian" id="vegetarian">
+        <input (change)="filterVegetarian(recipes)" type="checkbox" name="vegetarian" id="vegetarian">
         <label for="vegan"> Vegan </label>
         <input type="checkbox" name="vegan" id="vegan">
         <label for="gluten"> Gluten-free </label>
         <input type="checkbox" name="gluten" id="gluten">
         <label for="gluten"> Dairy-free </label>
-        <input type="checkbox" name="dairy" id="dairy" (click)="filterRecipes()">
+        <input type="checkbox" name="dairy" id="dairy">
     </div>
 </div>
 <section class="allRecipes">
