--- a/my-recipe-app/src/app/header/header.component.html
+++ b/my-recipe-app/src/app/header/header.component.html
@@ -16,8 +16,8 @@
     <ul class="list-reset md:flex md:items-center">
       <li class="md:ml-4">
         <a class="block no-underline hover:underline py-2 text-grey-darkest hover:text-black md:border-none md:p-0"
-          routerLink="/dashboard">
-          Dashboard
+          routerLink="/start">
+          Start
         </a>
       </li>
       <li class="md:ml-4">
@@ -28,8 +28,8 @@
       </li>
       <li class="md:ml-4">
         <a class="border-t block no-underline hover:underline py-2 text-grey-darkest hover:text-black md:border-none md:p-0"
-          href="#">
-          Feeling Lucky
+          routerLink="/saved-recipes">
+          Saved Recipes
         </a>
       </li>
     </ul>
