--- a/my-recipe-app/src/app/recipes/recipes.component.html
+++ b/my-recipe-app/src/app/recipes/recipes.component.html
@@ -37,12 +37,17 @@
                     </a>
                     <ul class="recipe-info-list">
                         <li class="recipe-servings pt-2">Servings: {{recipe.servings}} </li>
-                        <li class="recipe-time">Cook Time: {{recipe.readyInMinutes}} </li>
+                        <li class="recipe-time">Cook Time: {{recipe.readyInMinutes}} min </li>
                         <li class="recipe-time">Gluten free: {{recipe.glutenFree}} </li>
                         <li class="recipe-time">Dairy free: {{recipe.dairyFree}} </li>
                         <li class="recipe-time">Vegetarian: {{recipe.vegetarian}} </li>
                         <li class="recipe-time">Vegan: {{recipe.vegan}} </li>
                     </ul>
+                    <button
+                        class="clear bg-transparent hover:bg-green-500 text-green-700 font-semibold hover:text-white py-1 px-2 border border-green-500 hover:border-transparent rounded">Save</button>
+                    <button
+                        class="clear bg-transparent hover:bg-red-500 text-red-700 font-semibold hover:text-white py-1 px-2 border border-red-500 hover:border-transparent rounded">Remove</button>
+
                 </div>
             </li>
         </ul>
