--- a/my-recipe-app/src/app/saved-recipe/saved-recipe.component.html
+++ b/my-recipe-app/src/app/saved-recipe/saved-recipe.component.html
@@ -1,1 +1,16 @@
-<p>saved-recipe works!</p>
+<section class="savedRecipes">
+    <div class="allRecipes-wrapper grid grid-cols-4 grid-rows-2 gap-2">
+        <div class="recipe-card bg-gray-200 my-2 p-2 border rounded-lg max-w-xs">
+            <!-- <h2 class="text-xl pb-2">{{recipe.title}}</h2> -->
+            <!-- <img class="rounded-lg" src="{{recipe.image}}" alt=""> -->
+            <h2 class="text-xl pb-2">Dynamic Recipe Title</h2>
+            <img class="rounded-lg" img src="https://via.placeholder.com/300" alt="">
+            <ul class="recipe-info-list">
+                <li class="recipe-servings pt-2">Servings: </li>
+                <li class="recipe-time">Cook Time: </li>
+            </ul>
+            <button
+                class="clear bg-transparent hover:bg-red-500 text-red-700 font-semibold hover:text-white py-1 px-2 border border-red-500 hover:border-transparent rounded">Remove</button>
+        </div>
+    </div>
+</section>
