--- a/my-recipe-app/src/app/recipes/recipes.component.html
+++ b/my-recipe-app/src/app/recipes/recipes.component.html
@@ -41,11 +41,16 @@
                                 <li class="recipe-time">Dairy free: {{recipe.dairyFree}} </li>
                                 <li class="recipe-time">Vegetarian: {{recipe.vegetarian}} </li>
                                 <li class="recipe-time">Vegan: {{recipe.vegan}} </li>
+                                <li class="recipe-time">id: {{recipe.id}} </li>
                             </ul>
-                            <button
-                                class="clear bg-transparent hover:bg-green-500 text-green-700 font-semibold hover:text-white py-1 px-2 border border-green-500 hover:border-transparent rounded">Save</button>
-                            <button
-                                class="clear bg-transparent hover:bg-red-500 text-red-700 font-semibold hover:text-white py-1 px-2 border border-red-500 hover:border-transparent rounded">Remove</button>
+                            <button id="{{recipe.id}}" (click)="saveMessageService.saveRecipe($event)"
+                                class="clear bg-transparent hover:bg-green-500 text-green-700 font-semibold hover:text-white py-1 px-2 border border-green-500 hover:border-transparent rounded">
+                                Save
+                            </button>
+                            <!-- <button (click)="saveMessageService.removeRecipe()"
+                                class="clear bg-transparent hover:bg-red-500 text-red-700 font-semibold hover:text-white py-1 px-2 border border-red-500 hover:border-transparent rounded">
+                                Remove
+                            </button> -->
 
                         </div>
                     </li>
