--- a/my-recipe-app/src/app/recipes/recipes.component.html
+++ b/my-recipe-app/src/app/recipes/recipes.component.html
@@ -43,14 +43,14 @@
                                 <li class="recipe-time">Vegan: {{recipe.vegan}} </li>
                                 <li class="recipe-time">id: {{recipe.id}} </li>
                             </ul>
-                            <button id="{{recipe.id}}" (click)="saveMessageService.saveRecipe($event)"
+                            <button id="{{recipe.id}}" (click)="savedRecipeService.saveRecipe($event)"
                                 class="clear bg-transparent hover:bg-green-500 text-green-700 font-semibold hover:text-white py-1 px-2 border border-green-500 hover:border-transparent rounded">
                                 Save
                             </button>
-                            <!-- <button (click)="saveMessageService.removeRecipe()"
+                            <button (click)="savedRecipeService.deleteRecipe($event)"
                                 class="clear bg-transparent hover:bg-red-500 text-red-700 font-semibold hover:text-white py-1 px-2 border border-red-500 hover:border-transparent rounded">
                                 Remove
-                            </button> -->
+                            </button>
 
                         </div>
                     </li>
