--- a/my-recipe-app/src/app/recipes/recipes.component.html
+++ b/my-recipe-app/src/app/recipes/recipes.component.html
@@ -6,13 +6,15 @@
     <div class="filter-list">
         <p>Meal type:</p>
         <label for="breakfast"> Breakfast </label>
-        <input type="checkbox" name="breakfast" id="breakfast">
-        <label for="lunch"> Lunch </label>
-        <input type="checkbox" name="lunch" id="lunch">
-        <label for="dinner"> Dinner </label>
-        <input type="checkbox" name="dinner" id="dinner">
+        <input type="checkbox" name="breakfast" id="breakfast" (change)="filterClicked($event)">
         <label for="dessert"> Dessert </label>
-        <input type="checkbox" name="dessert" id="dessert">
+        <input type="checkbox" name="breakfast" id="breakfast" (change)="filterClicked($event)">
+        <label for="lunch"> Lunch </label>
+        <input type="checkbox" name="lunch" id="lunch" (change)="filterClicked($event)">
+        <label for="dinner"> Dinner </label>
+        <input type="checkbox" name="dinner" id="dinner" (change)="filterClicked($event)">
+        <label for="dessert"> Dessert </label>
+        <input type="checkbox" name="dessert" id="dessert" (change)="filterClicked($event)">
     </div>
     <div class="filter-list">
         <p>Filter options:</p>
@@ -43,7 +45,7 @@
                                 <li class="recipe-time">Vegan: {{recipe.vegan}} </li>
                                 <li class="recipe-time">id: {{recipe.id}} </li>
                             </ul>
-                            <button id="{{recipe.id}}" (click)="savedRecipeService.saveRecipe($event)"
+                            <button id="{{recipe.id}}" (click)="savedRecipeService.saveRecipe(recipe)"
                                 class="clear bg-transparent hover:bg-green-500 text-green-700 font-semibold hover:text-white py-1 px-2 border border-green-500 hover:border-transparent rounded">
                                 Save
                             </button>
