add mobile responsiveness, fix all html templates, change colors, fix header, footer centerings

--- a/my-recipe-app/src/app/app.component.html
+++ b/my-recipe-app/src/app/app.component.html
@@ -1,6 +1,5 @@
 <app-header></app-header>
-<main class="mx-52 my-8">
+<main class="p-10 lg:mx-52">
     <router-outlet></router-outlet>
-    <app-messages></app-messages>
 </main>
 <app-footer></app-footer>
