--- a/my-recipe-app/src/app/dashboard/dashboard.component.html
+++ b/my-recipe-app/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,6 @@
-<div class="featuredRecipeCard bg-green-200 my-2 p-2 border rounded-lg min-w-min">
+<div class="featuredRecipeCard bg-gray-100 my-2 p-2 border rounded-lg min-w-min shadow-xl">
     <div class="px-2">
+        <h1 class="text-xl font-bold">Todays featured recipe:</h1>
         <ul *ngFor="let recipe of featuredRecipes">
             <a routerLink="/detail/{{recipe.id}}">
                 <h2 class="text-xl pb-2">{{recipe.title}}</h2>
@@ -7,25 +8,27 @@
             </a>
             <p class="pb-2" [innerHTML]='recipe.summary'></p>
             <ul class="recipe-info-list">
-                <li class="recipe-servings pt-2">Servings: {{recipe.servings}} </li>
-                <li class="recipe-time">Cook Time: {{recipe.readyInMinutes}} </li>
+                <li class="recipe-servings pt-2"><span class="font-bold">Servings: </span>{{recipe.servings}} </li>
+                <li class="recipe-time"><span class="font-bold">Cook Time: </span>{{recipe.readyInMinutes}} </li>
             </ul>
         </ul>
     </div>
 </div>
-<div class="suggestion-wrapper bg-gray-100 py-2 p-2 border rounded-lg">
-    <h1 class="text-xl pb-2">Our suggestions</h1>
+<div class="suggestion-wrapper bg-gray-100 py-2 p-2 border rounded-lg shadow-xl">
+    <h1 class="text-xl pb-2">Our suggestions:</h1>
     <section class="topRecipes">
-        <div class="topRecipes-wrapper grid grid-cols-4 grid-rows-2 gap-2">
+        <div class="topRecipes-wrapper grid grid-cols-1 grid-rows-1 lg:grid-cols-4 lg:grid-rows-1 gap-2">
             <ul *ngFor="let recipe of suggestedRecipes">
-                <div class="recipe-card bg-indigo-200 my-2 p-2 border rounded-lg max-w-xs">
+                <div class="recipe-card max-w-sm mx-auto p-2 bg-indigo rounded-lg shadow-xl bg-indigo-200">
                     <a routerLink="/detail/{{recipe.id}}">
                         <h2 class="text-xl pb-2">{{recipe.title}}</h2>
                         <img class="rounded-lg" src="{{recipe.image}}" alt="">
                     </a>
                     <ul class="recipe-info-list">
-                        <li class="recipe-servings pt-2">Servings: {{recipe.servings}} </li>
-                        <li class="recipe-time">Cook Time: {{recipe.readyInMinutes}} min </li>
+                        <li class="recipe-servings pt-2"><span class="font-bold">Servings: </span>{{recipe.servings}}
+                        </li>
+                        <li class="recipe-time"><span class="font-bold">Cook Time: </span>{{recipe.readyInMinutes}} min
+                        </li>
                     </ul>
                 </div>
             </ul>
