--- a/my-recipe-app/src/app/footer/footer.component.html
+++ b/my-recipe-app/src/app/footer/footer.component.html
@@ -1,23 +1,23 @@
-<footer class="border-b md:flex md:items-center md:justify-center p-4 pb-0 shadow-lg md:pb-4">
+<footer class="border-b md:flex md:items-center md:justify-center p-4 pb-4 shadow-lg md:pb-4 text-center">
 
   <nav>
-    <ul class="list-reset md:flex md:items-center">
+    <ul class="list-reset sm:flex sm:items-center sm:text-center">
       <li class="md:ml-4">
         <a class="block no-underline hover:underline py-2 text-grey-darkest hover:text-black md:border-none md:p-0"
-          href="#">
+          routerLink="/start">
+          Start
+        </a>
+      </li>
+      <li class="md:ml-4">
+        <a class="border-t block no-underline hover:underline py-2 text-grey-darkest hover:text-black md:border-none md:p-0"
+          routerLink="/recipes">
           Recipes
         </a>
       </li>
       <li class="md:ml-4">
         <a class="border-t block no-underline hover:underline py-2 text-grey-darkest hover:text-black md:border-none md:p-0"
-          href="#">
-          Feeling Lucky
-        </a>
-      </li>
-      <li class="md:ml-4">
-        <a class="border-t block no-underline hover:underline py-2 text-grey-darkest hover:text-black md:border-none md:p-0"
-          href="#">
-          Random Link
+          routerLink="/saved-recipes">
+          Saved Recipes
         </a>
       </li>
     </ul>
