--- a/my-recipe-app/src/app/header/header.component.html
+++ b/my-recipe-app/src/app/header/header.component.html
@@ -1,7 +1,8 @@
-<header class="border-b md:flex md:items-center md:justify-between p-4 pb-0 shadow-lg md:pb-4">
+<header
+  class="border-b md:flex md:items-center md:justify-between p-4 pb-0 shadow-lg md:pb-4 text-center lg:text-right">
 
-  <div class="flex items-center justify-between mb-4 md:mb-0">
-    <h1 class="leading-none text-2xl text-grey-darkest">
+  <div class="flex items-center justify-between mb-4 md:mb-0 ">
+    <h1 class="leading-none text-2xl text-grey-darkest text-center">
       <a class="no-underline text-grey-darkest hover:text-black" routerLink="/start">
         Angular Recipe App
       </a>
