--- a/my-recipe-app/src/app/recipe-detail/recipe-detail.component.html
+++ b/my-recipe-app/src/app/recipe-detail/recipe-detail.component.html
@@ -1,24 +1,25 @@
 <div *ngIf="recipe">
-    <h1 class="text-xl pb-2">{{recipe.title}}</h1>
-    <div>id: {{recipe.id}}</div>
-    <img class="rounded-lg pb-2" src="{{recipe.image}}" alt="recipe-image">
-    <p class="pb-2" [innerHTML]='recipe.summary'></p>
-    <p class="pb-2">Meal type: {{recipe.dishTypes}}</p>
-    <ul class="recipe-info-list py-2">
-        <li class="recipe-servings pb-2">Servings: {{recipe.servings}}</li>
-        <li class="recipe-time pb-2">Cook Time: {{recipe.readyInMinutes}}min</li>
-    </ul>
-    <button
-        class="clear bg-transparent hover:bg-green-500 text-green-700 font-semibold hover:text-white py-1 px-2 border border-green-500 hover:border-transparent rounded">Save</button>
-    <button
-        class="clear bg-transparent hover:bg-red-500 text-red-700 font-semibold hover:text-white py-1 px-2 border border-red-500 hover:border-transparent rounded">Remove</button>
-    <p class="text-xl pb-2 pt-2">Ingredients:</p>
-    <ul class="pb-2" *ngFor="let ingredient of recipe.extendedIngredients">
-        <li>{{ ingredient.name }}</li>
-    </ul>
-    <!-- {{recipe.extendedIngredients}} -->
-    <p class="text-xl pb-2">Instructions:</p>
-    <p class="pb-2" [innerHTML]='recipe.instructions'></p>
+    <div class="bg-gray-100 my-2 p-2 border rounded-lg min-w-min shadow-xl">
+        <h1 class="text-xl pb-2">{{recipe.title}}</h1>
+        <img class="rounded-lg pb-2" src="{{recipe.image}}" alt="recipe-image">
+        <p class="pb-2" [innerHTML]='recipe.summary'></p>
+        <p class="pb-2"><span class="font-bold">Meal type: </span>{{recipe.dishTypes}}</p>
+        <ul class="recipe-info-list py-2">
+            <li class="recipe-servings pb-2"><span class="font-bold">Servings: </span>{{recipe.servings}}</li>
+            <li class="recipe-time pb-2"><span class="font-bold">Cook Time: </span>{{recipe.readyInMinutes}}min</li>
+        </ul>
+        <button
+            class="clear bg-transparent hover:bg-green-500 text-green-700 font-semibold hover:text-white py-1 px-2 border border-green-500 hover:border-transparent rounded">Save</button>
+        <button
+            class="clear bg-transparent hover:bg-red-500 text-red-700 font-semibold hover:text-white py-1 px-2 border border-red-500 hover:border-transparent rounded">Remove</button>
+        <p class="text-xl pb-2 pt-2">Ingredients:</p>
+        <ul class="pb-2" *ngFor="let ingredient of recipe.extendedIngredients">
+            <li>{{ ingredient.name }}</li>
+        </ul>
+        <!-- {{recipe.extendedIngredients}} -->
+        <p class="text-xl pb-2">Instructions:</p>
+        <p class="pb-2" [innerHTML]='recipe.instructions'></p>
+    </div>
 </div>
 <button
     class="clear bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-1 px-2 border border-blue-500 hover:border-transparent rounded"
