--- a/my-recipe-app/src/app/recipes/recipes.component.html
+++ b/my-recipe-app/src/app/recipes/recipes.component.html
@@ -1,62 +1,121 @@
-<h1 class="text-xl pb-2">All Recipes</h1>
-<div class="filter-wrapper">
-    <p>Looking for something specific? Filter through meals by selecting a type followed by any preferences you may
-        have
-    </p>
-    <div class="filter-list">
-        <p>Meal type:</p>
-        <label for="breakfast"> Breakfast </label>
-        <input type="checkbox" name="breakfast" id="breakfast" (change)="filterDiet($event)">
-        <label for="lunch"> Lunch </label>
-        <input type="checkbox" name="lunch" id="lunch" (change)="filterDiet($event)">
-        <label for="dinner"> Dinner </label>
-        <input type="checkbox" name="dinner" id="dinner" (change)="filterDiet($event)">
-        <label for="dessert"> Dessert </label>
-        <input type="checkbox" name="dessert" id="dessert" (change)="filterDiet($event)">
-        <label for="dessert"> Salad </label>
-        <input type="checkbox" name="salad" id="salad" (change)="filterDiet($event)">
-        <label for="dessert"> Soup </label>
-        <input type="checkbox" name="soup" id="soup" (change)="filterDiet($event)">
-    </div>
-    <div class="filter-list">
-        <p>Filter options:</p>
-        <label for="vegetarian"> Vegetarian </label>
-        <input type="checkbox" name="diet" id="vegetarian" (change)="filterDiet($event)" />
-        <label for="vegan"> Vegan </label>
-        <input type="checkbox" name="diet" id="vegan" (change)="filterDiet($event)" />
-        <label for="glutenFree"> Gluten-Free </label>
-        <input type="checkbox" name="diet" id="glutenFree" (change)="filterDiet($event)" />
-        <label for="dairyFree"> Dairy-free </label>
-        <input type="checkbox" name="diet" id="dairyFree" (change)="filterDiet($event)" />
-        <section class="allRecipes">
-            <div class="allRecipes-wrapper grid grid-cols-4 grid-rows-2 gap-2">
-                <ul *ngFor="let recipe of filteredRecipes">
-                    <li>
-                        <div class="recipe-card bg-blue-200 my-2 p-2 border rounded-lg max-w-xs">
-                            <a routerLink="/detail/{{recipe.id}}">
-                                <h2 class="text-xl pb-2">{{recipe.title}}</h2>
-                                <img class="rounded-lg" src="{{recipe.image}}" alt="">
-                            </a>
-                            <p>Type: {{recipe.dishTypes}}</p>
-                            <ul class="recipe-info-list">
-                                <li class="recipe-servings pt-2">Servings: {{recipe.servings}} </li>
-                                <li class="recipe-time">Cook Time: {{recipe.readyInMinutes}} min </li>
-                                <li class="recipe-time">Gluten free: {{recipe.glutenFree}} </li>
-                                <li class="recipe-time">Dairy free: {{recipe.dairyFree}} </li>
-                                <li class="recipe-time">Vegetarian: {{recipe.vegetarian}} </li>
-                                <li class="recipe-time">Vegan: {{recipe.vegan}} </li>
-                                <li class="recipe-time">id: {{recipe.id}} </li>
-                            </ul>
-                            <button id="{{recipe.id}}" (click)="savedRecipeService.saveRecipe(recipe)"
-                                class="clear bg-transparent hover:bg-green-500 text-green-700 font-semibold hover:text-white py-1 px-2 border border-green-500 hover:border-transparent rounded">
-                                Save
-                            </button>
-                            <button (click)="savedRecipeService.deleteRecipe($event)"
-                                class="clear bg-transparent hover:bg-red-500 text-red-700 font-semibold hover:text-white py-1 px-2 border border-red-500 hover:border-transparent rounded">
-                                Remove
-                            </button>
-                        </div>
-                    </li>
-                </ul>
+<div class="bg-gray-100 my-2 p-2 border rounded-lg min-w-min shadow-xl">
+    <h1 class="text-xl pb-2">All Recipes:</h1>
+    <div class="filter-wrapper">
+        <p class="italic">Looking for something specific? Filter through meals by selecting a type followed your diet
+            preferences
+        </p>
+        <div class="filter-list">
+            <p class="font-bold">Meal type:</p>
+            <div class="lg:flex space-x-5">
+                <div>
+                    <label for="breakfast"> Breakfast </label>
+                    <input type="checkbox" name="breakfast" id="breakfast" (change)="filterDiet($event)">
+                </div>
+                <div>
+                    <label for="lunch"> Lunch </label>
+                    <input type="checkbox" name="lunch" id="lunch" (change)="filterDiet($event)">
+                </div>
+                <div>
+                    <label for="dinner"> Dinner </label>
+                    <input type="checkbox" name="dinner" id="dinner" (change)="filterDiet($event)">
+                </div>
+                <div>
+                    <label for="dessert"> Dessert </label>
+                    <input type="checkbox" name="dessert" id="dessert" (change)="filterDiet($event)">
+                </div>
+                <div>
+                    <label for="dessert"> Salad </label>
+                    <input type="checkbox" name="salad" id="salad" (change)="filterDiet($event)">
+                </div>
+                <div>
+                    <label for="dessert"> Soup </label>
+                    <input type="checkbox" name="soup" id="soup" (change)="filterDiet($event)">
+                </div>
             </div>
-        </section>
+
+        </div>
+        <p class="font-bold">Diet options:</p>
+        <div class="flex">
+            <div class="filter-list lg:flex space-x-5">
+                <div>
+                    <label for="vegan"> Vegan </label>
+                    <input type="checkbox" name="diet" id="vegan" (change)="filterDiet($event)" />
+                </div>
+                <div>
+                    <label for="vegetarian"> Vegetarian </label>
+                    <input type="checkbox" name="diet" id="vegetarian" (change)="filterDiet($event)" />
+                </div>
+                <div>
+                    <label for="glutenFree"> Gluten-Free </label>
+                    <input type="checkbox" name="diet" id="glutenFree" (change)="filterDiet($event)" />
+                </div>
+                <div>
+                    <label for="dairyFree"> Dairy-free </label>
+                    <input type="checkbox" name="diet" id="dairyFree" (change)="filterDiet($event)" />
+                </div>
+            </div>
+
+            <section class="allRecipes">
+                <div class="allRecipes-wrapper grid grid-cols-1 grid-rows-1 gap-2 lg:grid-cols-4 grid-rows:2">
+                    <ul *ngFor="let recipe of filteredRecipes">
+                        <li>
+                            <div class="recipe-card bg-blue-100 my-2 p-2 border rounded-lg max-w-xs shadow-xl">
+                                <a routerLink="/detail/{{recipe.id}}">
+                                    <h2 class="text-xl pb-2">{{recipe.title}}</h2>
+                                    <img class="rounded-lg" src="{{recipe.image}}" alt="">
+                                </a>
+                                <p>Type: {{recipe.dishTypes}}</p>
+                                <ul class="recipe-info-list">
+                                    <li class="recipe-servings pt-2"><span class="font-bold">Servings:
+                                        </span>{{recipe.servings}} </li>
+                                    <li class="recipe-time"><span class="font-bold">Cook Time:
+                                        </span>{{recipe.readyInMinutes}} min </li>
+                                    <li class="recipe-time"><span class="font-bold">Gluten free:
+                                        </span>{{recipe.glutenFree}} </li>
+                                    <li class="recipe-time"><span class="font-bold">Dairy free:
+                                        </span>{{recipe.dairyFree}}
+                                    </li>
+                                    <li class="recipe-time"><span class="font-bold">Vegetarian:
+                                        </span>{{recipe.vegetarian}}
+                                    </li>
+                                    <li class="recipe-time"><span class="font-bold">Vegan: </span>{{recipe.vegan}}
+                                    </li>
+                                </ul>
+                                <ng-container *ngIf="displaySave; then showSave; else showRemove">
+                                </ng-container>
+
+                                <ng-template #showSave>
+                                    <div>
+                                        <button id="{{recipe.id}}" (click)="savedRecipeService.saveRecipe(recipe)"
+                                            class="clear bg-transparent hover:bg-green-500 text-green-700 font-semibold hover:text-white py-1 px-2 border border-green-500 hover:border-transparent rounded">
+                                            Save
+                                        </button>
+                                    </div>
+                                </ng-template>
+
+                                <ng-template #showRemove>
+                                    <div>
+                                        <button (click)="savedRecipeService.deleteRecipe($event)"
+                                            class="clear bg-transparent hover:bg-red-500 text-red-700 font-semibold hover:text-white py-1 px-2 border border-red-500 hover:border-transparent rounded">
+                                            Remove
+                                        </button>
+                                    </div>
+                                </ng-template>
+                                <!-- <div *ngIf="displaySave; else displayRemove">
+                                <button id="{{recipe.id}}" (click)="savedRecipeService.saveRecipe(recipe)"
+                                    class="clear bg-transparent hover:bg-green-500 text-green-700 font-semibold hover:text-white py-1 px-2 border border-green-500 hover:border-transparent rounded">
+                                    Save
+                                </button>
+                            </div>
+                            <ng-template #displayRemove>
+                                <button (click)="savedRecipeService.deleteRecipe($event)"
+                                    class="clear bg-transparent hover:bg-red-500 text-red-700 font-semibold hover:text-white py-1 px-2 border border-red-500 hover:border-transparent rounded">
+                                    Remove
+                                </button>
+                            </ng-template> -->
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+        </div>
