fix save button, now changes to remove button

--- a/my-recipe-app/src/app/saved-recipe/saved-recipe.component.html
+++ b/my-recipe-app/src/app/saved-recipe/saved-recipe.component.html
@@ -1,6 +1,7 @@
 <div class="bg-gray-100 my-2 p-2 border rounded-lg min-w-min shadow-xl">
     <h1 class="text-xl">Your saved recipes:</h1>
     <section class="savedRecipes">
+        <!-- <div *ngIf="savedRecipeService.savedRecipeCheck; else showNoSavedRecipes"> -->
         <div class="allRecipes-wrapper grid grid-cols-1 grid-rows-1 lg:grid-cols-4 lg:grid-rows-2 gap-2">
             <ul *ngFor="let recipe of recipesList; let i = index">
                 <li>
@@ -13,10 +14,12 @@
                             <li class="recipe-servings pt-2"><span class="font-bold">Servings:
                                 </span>{{recipe.servings}}
                             </li>
-                            <li class="recipe-time"><span class="font-bold">Cook Time: </span>{{recipe.readyInMinutes}}
+                            <li class="recipe-time"><span class="font-bold">Cook Time:
+                                </span>{{recipe.readyInMinutes}}
                                 min
                             </li>
-                            <li class="recipe-time"><span class="font-bold">Gluten free: </span>{{recipe.glutenFree}}
+                            <li class="recipe-time"><span class="font-bold">Gluten free:
+                                </span>{{recipe.glutenFree}}
                             </li>
                             <li class="recipe-time"><span class="font-bold">Dairy free: </span>{{recipe.dairyFree}}
                             </li>
@@ -29,3 +32,12 @@
                             Remove
                         </button>
                     </div>
+                    <!-- <ng-template #showNoSavedRecipes>
+                            <p class="font-bold">You have no saved recipes, yet.</p>
+                        </ng-template> -->
+                    <!-- </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+</div> -->
