--- a/my-recipe-app/src/app/recipes/recipes.component.html
+++ b/my-recipe-app/src/app/recipes/recipes.component.html
@@ -35,27 +35,26 @@
 
         </div>
         <p class="font-bold">Diet options:</p>
-        <div class="flex">
-            <div class="filter-list lg:flex lg:space-x-5">
-                <div>
-                    <label for="vegan"> Vegan </label>
-                    <input type="checkbox" name="diet" id="vegan" (change)="filterDiet($event)" />
-                </div>
-                <div>
-                    <label for="vegetarian"> Vegetarian </label>
-                    <input type="checkbox" name="diet" id="vegetarian" (change)="filterDiet($event)" />
-                </div>
-                <div>
-                    <label for="glutenFree"> Gluten-Free </label>
-                    <input type="checkbox" name="diet" id="glutenFree" (change)="filterDiet($event)" />
-                </div>
-                <div>
-                    <label for="dairyFree"> Dairy-free </label>
-                    <input type="checkbox" name="diet" id="dairyFree" (change)="filterDiet($event)" />
-                </div>
+        <div class="filter-list lg:flex lg:space-x-5">
+            <div>
+                <label for="vegan"> Vegan </label>
+                <input type="checkbox" name="diet" id="vegan" (change)="filterDiet($event)" />
             </div>
-
-            <section class="allRecipes">
+            <div>
+                <label for="vegetarian"> Vegetarian </label>
+                <input type="checkbox" name="diet" id="vegetarian" (change)="filterDiet($event)" />
+            </div>
+            <div>
+                <label for="glutenFree"> Gluten-Free </label>
+                <input type="checkbox" name="diet" id="glutenFree" (change)="filterDiet($event)" />
+            </div>
+            <div>
+                <label for="dairyFree"> Dairy-free </label>
+                <input type="checkbox" name="diet" id="dairyFree" (change)="filterDiet($event)" />
+            </div>
+        </div>
+        <section class="allRecipes">
+            <div *ngIf="showAllRecipes; else showNoMatchingFilters">
                 <div class="allRecipes-wrapper grid grid-cols-1 grid-rows-1 gap-2 lg:grid-cols-4 grid-rows:2">
                     <ul *ngFor="let recipe of filteredRecipes">
                         <li>
@@ -64,7 +63,6 @@
                                     <h2 class="text-xl pb-2">{{recipe.title}}</h2>
                                     <img class="rounded-lg" src="{{recipe.image}}" alt="">
                                 </a>
-                                <p>Type: {{recipe.dishTypes}}</p>
                                 <ul class="recipe-info-list">
                                     <li class="recipe-servings pt-2"><span class="font-bold">Servings:
                                         </span>{{recipe.servings}} </li>
@@ -81,41 +79,45 @@
                                     <li class="recipe-time"><span class="font-bold">Vegan: </span>{{recipe.vegan}}
                                     </li>
                                 </ul>
-                                <ng-container *ngIf="displaySave; then showSave; else showRemove">
+                                <ng-container *ngIf="savedRecipeService.displaySave; then showSave; else showRemove">
                                 </ng-container>
-
                                 <ng-template #showSave>
                                     <div>
                                         <button id="{{recipe.id}}" (click)="savedRecipeService.saveRecipe(recipe)"
-                                            class="clear bg-transparent hover:bg-green-200 text-green-700 font-semibold hover:text-white py-1 px-2 border border-green-500 hover:border-transparent rounded">
+                                            class="clear bg-transparent hover:bg-green-500 text-green-700 font-semibold hover:text-white py-1 px-2 border border-green-500 hover:border-transparent rounded">
                                             Save
                                         </button>
                                     </div>
                                 </ng-template>
-
                                 <ng-template #showRemove>
                                     <div>
-                                        <button (click)="savedRecipeService.deleteRecipe($event)"
-                                            class="clear bg-transparent hover:bg-red-200 text-red-700 font-semibold hover:text-white py-1 px-2 border border-red-500 hover:border-transparent rounded">
+                                        <button id="{{recipe.id}}" (click)="savedRecipeService.deleteRecipe($event)"
+                                            class="clear bg-transparent hover:bg-red-500 text-red-700 font-semibold hover:text-white py-1 px-2 border border-red-500 hover:border-transparent rounded">
                                             Remove
                                         </button>
                                     </div>
                                 </ng-template>
-                                <!-- <div *ngIf="displaySave; else displayRemove">
-                                <button id="{{recipe.id}}" (click)="savedRecipeService.saveRecipe(recipe)"
-                                    class="clear bg-transparent hover:bg-green-500 text-green-700 font-semibold hover:text-white py-1 px-2 border border-green-500 hover:border-transparent rounded">
-                                    Save
-                                </button>
+
+                                <!-- Button testing -->
+                                <!-- Button testing -->
+                                <!-- Button testing -->
+                                <div *ngIf="toggleSave" (click)="toggleSave = false">
+                                    <button>Save</button>
+                                    <button>Remove</button>
+                                </div>
+                                <!-- Button testing -->
+                                <!-- Button testing -->
+                                <!-- Button testing -->
+
                             </div>
-                            <ng-template #displayRemove>
-                                <button (click)="savedRecipeService.deleteRecipe($event)"
-                                    class="clear bg-transparent hover:bg-red-500 text-red-700 font-semibold hover:text-white py-1 px-2 border border-red-500 hover:border-transparent rounded">
-                                    Remove
-                                </button>
-                            </ng-template> -->
-                            </div>
+                            <!-- </div> -->
                         </li>
                     </ul>
                 </div>
-            </section>
-        </div>
+            </div>
+            <ng-template #showNoMatchingFilters>
+                <p class="text-xl">There are no results to show.</p>
+            </ng-template>
+        </section>
+    </div>
+</div>
