add save recipe functoinality to recipe-detail

--- a/my-recipe-app/src/app/recipes/recipes.component.html
+++ b/my-recipe-app/src/app/recipes/recipes.component.html
@@ -97,19 +97,17 @@
                                         </button>
                                     </div>
                                 </ng-template>
-
-                                <!-- Button testing -->
-                                <!-- Button testing -->
-                                <!-- Button testing -->
-                                <div *ngIf="toggleSave" (click)="toggleSave = false">
-                                    <button>Save</button>
-                                    <button>Remove</button>
-                                </div>
-                                <!-- Button testing -->
-                                <!-- Button testing -->
-                                <!-- Button testing -->
-
                             </div>
+
+                            <!-- Button testing -->
+                            <!-- Button testing -->
+                            <!-- Button testing -->
+
+                            <!-- Button testing -->
+                            <!-- Button testing -->
+                            <!-- Button testing -->
+
+                            <!-- </div> -->
                             <!-- </div> -->
                         </li>
                     </ul>
