fix saving of recipes

--- a/my-recipe-app/src/app/saved-recipe/saved-recipe.component.html
+++ b/my-recipe-app/src/app/saved-recipe/saved-recipe.component.html
@@ -27,7 +27,7 @@
                             </li>
                             <li class="recipe-time"><span class="font-bold">Vegan: </span>{{recipe.vegan}} </li>
                         </ul>
-                        <button (click)="removeRecipe(i)"
+                        <button (click)="removeRecipe(recipe)"
                             class="clear bg-transparent hover:bg-red-500 text-red-700 font-semibold hover:text-white py-1 px-2 border border-red-500 hover:border-transparent rounded">
                             Remove
                         </button>
