--- a/my-recipe-app/src/app/recipes/recipes.component.html
+++ b/my-recipe-app/src/app/recipes/recipes.component.html
@@ -79,24 +79,17 @@
                                     <li class="recipe-time"><span class="font-bold">Vegan: </span>{{recipe.vegan}}
                                     </li>
                                 </ul>
-                                <ng-container *ngIf="savedRecipeService.displaySave; then showSave; else showRemove">
-                                </ng-container>
-                                <ng-template #showSave>
-                                    <div>
-                                        <button id="{{recipe.id}}" (click)="savedRecipeService.saveRecipe(recipe)"
-                                            class="clear bg-transparent hover:bg-green-500 text-green-700 font-semibold hover:text-white py-1 px-2 border border-green-500 hover:border-transparent rounded">
-                                            Save
-                                        </button>
-                                    </div>
-                                </ng-template>
-                                <ng-template #showRemove>
-                                    <div>
-                                        <button id="{{recipe.id}}" (click)="savedRecipeService.deleteRecipe($event)"
-                                            class="clear bg-transparent hover:bg-red-500 text-red-700 font-semibold hover:text-white py-1 px-2 border border-red-500 hover:border-transparent rounded">
+                                <div>
+                                    <button id="{{recipe.id}}" (click)="savedRecipeService.toggleFavorite(recipe)"
+                                        class="clear bg-transparent hover:bg-green-500 text-green-700 font-semibold hover:text-white py-1 px-2 border border-green-500 hover:border-transparent rounded">
+                                        <span *ngIf="recipe.favorite">
                                             Remove
-                                        </button>
-                                    </div>
-                                </ng-template>
+                                        </span>
+                                        <span *ngIf="!recipe.favorite">
+                                            Save
+                                        </span>
+                                    </button>
+                                </div>
                             </div>
                         </li>
                     </ul>
